<resources>
    <string name="app_name">SQLitePractice</string>
    <string name="product_shop">Product shop</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_amount">Enter weight</string>
    <string name="enter_price">Enter price</string>
    <string name="save">Save</string>
    <string name="product_name">Product name: %s</string>
    <string name="weight">Weight: %s</string>
    <string name="price">Price: %s</string>
    <string name="error_loading">Error loading</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="enter_valid_amount_and_price">Enter valid weight and price</string>
    <string name="exit">Exit</string>
    <string name="edit_record">Edit record</string>
    <string name="enter_data_below">Enter data below</string>
    <string name="update">Update</string>
    <string name="record_updated">Record updated</string>
</resources>