<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/enter_name"
        android:inputType="text" />
    <EditText
        android:id="@+id/amountET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal" />
    <EditText
        android:id="@+id/priceET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/enter_price"
        android:inputType="numberDecimal" />
</LinearLayout>